@@ -1,4 +1,4 @@
-DIST dbmathml-1.1_rc1.dtd 3525 SHA256 70da7140035621330f1b5ab6926197c3c3af467f2207d55a41f6396d9ad96abd SHA512 031ad81e0fd873d2ed0fb78a074cc2de93ea7c937d85aac6cb2dc3023e3ba494a9a20f485b5355ce9060aea9adae192c9259b59139ac71273ca3fb858a240704 WHIRLPOOL fff4da1abccf69ebf42963f31571da7ba173008410c08b78e0983d6ca81bb16c6bb0cc5081c472ca842223ba598be5e5f1520df7a59b6466836343af7a28e8a5
-EBUILD docbook-mathml-dtd-1.1_rc1.ebuild 1799 SHA256 4f09b9c46d8b4350e6f6e2fe1fbcddc0d487eb3b0e37d4599c41f1c280b5a05a SHA512 0a9b12ff872b029c439ad66dc36ca3019a3841e0483582da85b6cc3bcc516cf23c56ca6b292e1faadeb1b55859c1b628000e7b15e08e93e78401d8a2e4005d12 WHIRLPOOL 479f8be065d6354b48e0318c473b46101386b56c6d9573ca0fd6710fd6cf98c90342244524d5d32bacffcf21b07ce65c0eaae341efcdb0c88ac2dd35e35f2680
-MISC ChangeLog 368 SHA256 fdfda7bc744a1d1a2bb0e61d2a8d419b9e24fd48f3df2088f2a5f42715ef08d7 SHA512 0e410a7231041aec8e8034de5cf1defcd22294e2be0c977f68b367f1b06333e56e537cfa75f0e1e7000a5ee67d00839a0aef06267f5acbbcb5187da4156d2931 WHIRLPOOL 6a2045f126ebce23ed0091f1d914f86d6395e56aaab4c0f1fad735e09469fc3fbcd247cf78b54c690c038479fb2ebedd05291dd47725f531ded568e00e7db1f4
+DIST dbmathml.dtd 3525 SHA256 70da7140035621330f1b5ab6926197c3c3af467f2207d55a41f6396d9ad96abd SHA512 031ad81e0fd873d2ed0fb78a074cc2de93ea7c937d85aac6cb2dc3023e3ba494a9a20f485b5355ce9060aea9adae192c9259b59139ac71273ca3fb858a240704 WHIRLPOOL fff4da1abccf69ebf42963f31571da7ba173008410c08b78e0983d6ca81bb16c6bb0cc5081c472ca842223ba598be5e5f1520df7a59b6466836343af7a28e8a5
+EBUILD docbook-mathml-dtd-1.1_rc1.ebuild 1713 SHA256 17d8d4b5b6d40a0ee7756e6cbc3993a60fc7db42978b107afcf7dcb0f4363c9a SHA512 f2f2b81a185e846911fe35229ec7d15c2e0cff2d7bb2d3365d8caa7d1160b6337da2d268ab90d5597dab80255e74da7e6d685959c9fd6428413ebc1b2e966ae5 WHIRLPOOL 4eae704c4bdb82120539d37fd0cbc939fa00b459bd59124672280686bb2cb1ab7c1e33ecc7b16f20e8a03f85b9afb6ff9404329b06dba271cb24efd9d2c7f6bd
+MISC ChangeLog 505 SHA256 e6ae821dfc1be53ae3630f08475dfc3ce169f065e26095e45ef469e11881f0a6 SHA512 e0bd3f5651e0378f6bb12620cb51fe05b840df66a693e07d39321a18824f8a78227bc44393689b122d3861a7f592b661ed503b963961aec6dbf84bb596b1defb WHIRLPOOL 59963f27f8a72a85506a15c3227c0754888ad46d0ecd63d784285a8b08cf3dd50be27ef5abc6f4db459f54a0e04efb1c28641a49a5af32ab8e9536f9d67d849c
 MISC metadata.xml 214 SHA256 c1f09dc7d5313cd2da7b82259c7846ed23144d62b15e59680ada90e2b6b4d154 SHA512 aeb2fb354a9ddf41c45a071091a58b91eaf8b25d6d2c49e3e3daa547b591a54530144de4533573160b48dc356289c909612c4e3c80e387f081f88cb39263e130 WHIRLPOOL 54d8861daedd18ca38e4ada0fb71026c612b63946d47a9b34de90d1d6d85c8ce05c0a4b97730f554ea637d73ccce8ed207d33e707c2b8c1dd28af24cf44dd186
