@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Dec 2013; Klemens Baum (kbwt) <klemensbaum@gmail.com>
+  docbook-mathml-dtd-1.1_rc1.ebuild:
+  Upgrade to EAPI 5 and simplify ebuild
+
 *docbook-mathml-dtd-1.1_rc1 (16 Dec 2013)
 
   16 Dec 2013; Klemens Baum (kbwt) <klemensbaum@gmail.com>
